--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Brehy">
-        <activity android:name=".AktualityContent"></activity>
+        <activity
+            android:name=".Webstranka"
+            android:exported="true" />
+        <activity android:name=".AktualityContent" />
         <activity
             android:name=".Uvod"
             android:configChanges="orientation|screenSize">
@@ -34,6 +36,7 @@
         <activity
             android:name=".Aktuality"
             android:configChanges="orientation|screenSize" />
+
         <service
             android:name=".GoogleMessagingService"
             android:exported="false">
