--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="sk.brehy">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,14 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Brehy">
         <activity
-            android:name=".LektoriLogin"
-            android:exported="true" />
-        <activity
-            android:name=".Webstranka"
-            android:exported="true" />
-        <activity android:name=".AktualityContent" />
-        <activity
-            android:name=".Uvod"
+            android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true">
             <intent-filter>
@@ -28,18 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Lektori"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".Oznamy"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".Kontakt"
-            android:configChanges="orientation|screenSize" />
-        <activity
-            android:name=".Aktuality"
-            android:configChanges="orientation|screenSize" />
 
         <service
             android:name=".GoogleMessagingService"
