--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sk.brehy">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-sdk tools:overrideLibrary="com.google.firebase.messaging.ktx,com.google.android.gms.cloudmessaging,
+    androidx.lifecycle.ktx,androidx.lifecycle.livedata.core,androidx.lifecycle.process,androidx.lifecycle.viewmodel.savedstate,
+    androidx.lifecycle.livedata.core.ktx,androidx.lifecycle.runtime,androidx.lifecycle.livedata.ktx,
+    androidx.lifecycle.viewmodel.ktx,com.google.firebase.auth.ktx" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
