--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-sdk tools:overrideLibrary="com.google.firebase.messaging.ktx,com.google.android.gms.cloudmessaging,
     androidx.lifecycle.ktx,androidx.lifecycle.livedata.core,androidx.lifecycle.process,androidx.lifecycle.viewmodel.savedstate,
     androidx.lifecycle.livedata.core.ktx,androidx.lifecycle.runtime,androidx.lifecycle.livedata.ktx,
-    androidx.lifecycle.viewmodel.ktx,com.google.firebase.auth.ktx" />
+    androidx.lifecycle.viewmodel.ktx,com.google.firebase.auth.ktx, androidx.lifecycle.service" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
