--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ plugins {
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "sk.brehy"
-        minSdk 16
-        targetSdk 33
-        versionCode 21
-        versionName "1.3"
+        minSdk 21
+        targetSdk 35
+        versionCode 22
+        versionName "2.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -29,6 +29,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -59,7 +60,9 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.applandeo:material-calendar-view:1.9.0'
-    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.jsibbold:zoomage:1.3.1'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
+    implementation("com.kizitonwose.calendar:view:2.6.0")
+    implementation("com.kizitonwose.calendar:compose:2.6.0")
 }
