--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         applicationId "sk.brehy"
-        minSdk 21
-        targetSdk 35
-        versionCode 22
-        versionName "2.0"
+        minSdk 23
+        targetSdk 36
+        versionCode 25
+        versionName "2.1"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,28 +41,28 @@ android {
 }
 
 dependencies {
-    implementation 'org.jsoup:jsoup:1.17.2'
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
-    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'org.jsoup:jsoup:1.21.2'
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.3'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.3'
+    implementation 'androidx.fragment:fragment-ktx:1.8.9'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation platform('com.google.firebase:firebase-bom:32.7.2')
-    implementation 'com.google.firebase:firebase-auth-ktx:22.3.1'
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.4.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.3.0'
+    implementation platform('com.google.firebase:firebase-bom:34.1.0')
+    implementation 'com.google.firebase:firebase-auth-ktx:23.2.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx:24.1.2'
+    implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
     implementation 'com.jsibbold:zoomage:1.3.1'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
-    implementation("com.kizitonwose.calendar:view:2.6.0")
-    implementation("com.kizitonwose.calendar:compose:2.6.0")
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
+    implementation('com.kizitonwose.calendar:view:2.8.0')
+    implementation('com.kizitonwose.calendar:compose:2.8.0')
 }
